# azure-ai-foundry-agents-deep-research

./: .env.template  README.md  main.py  pyproject.toml  requirements.txt  research_core.py  research_progress.txt  research_report.md  start.py  streamlit_app.py
azure_ai_research/: __init__.py
azure_ai_research/cli/: __init__.py  main.py
azure_ai_research/core/: __init__.py  citations.py  research.py  telemetry.py
azure_ai_research/infrastructure/: __init__.py  azure_client.py  config.py  file_system.py
azure_ai_research/security/: __init__.py  validation.py
azure_ai_research/web/: __init__.py  app.py  callbacks.py  session.py
