[project]
name = "azure-ai-foundry-agents-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-agents==1.2.0b1",
    "azure-ai-projects>=1.0.0",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "azure-identity>=1.24.0",
    "azure-monitor-opentelemetry>=1.6.13",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "python-dotenv>=1.1.1",
]
